objects/Broker_Consultant_Commissions__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Broker/Consultant Commissions</relationshipLabel>
        <relationshipName>Broker_Consultant_Commissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applies_to_only_a_portion_of_group__c</fullName>
        <description>Yes/No picklist to indicate if this commission only applies to a portion of the group number</description>
        <inlineHelpText>Does this apply only to a portion of the group number indicated above?</inlineHelpText>
        <label>Applies to only a portion of group #?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BCContactRealtionshipID__c</fullName>
        <formula>BrokerageAndConsultant__r.Consultant__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BCContactRealtionshipID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BrokerageAndConsultant__c</fullName>
        <inlineHelpText>Do not make any consultant changes using this field. Please click Cancel and select the appropriate consultant from the drop-down.</inlineHelpText>
        <label>Brokerage/Consultant</label>
        <referenceTo>Brokerage_and_Consultant__c</referenceTo>
        <relationshipLabel>Broker/Consultant Commissions (Brokerage and Consultant)</relationshipLabel>
        <relationshipName>Broker_Consultant_Commissions1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Commission_Dollar_Amount__c</fullName>
        <label>Commission Dollar Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commission_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Commission End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commission_Percentage__c</fullName>
        <label>Commission Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commission_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Commission Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consultant_Name__c</fullName>
        <formula>BrokerageAndConsultant__r.Consultant_Name__c</formula>
        <label>Consultant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consultant</label>
        <referenceTo>ContactRelationship__c</referenceTo>
        <relationshipLabel>Broker/Consultant Commissions</relationshipLabel>
        <relationshipName>Broker_Consultant_Commissions_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <description>This is the funding type associated to this Broker/Consultant Commissions</description>
        <label>Funding Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Numbers__c</fullName>
        <description>This is the group number(s) associated to these Broker/Consultant Commissions</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>List Group Numbers Applicable To This Commission (Please separate numbers with a comma). Actual group information must be entered. Do not enter &apos;All&apos; or only a portion of the information. If applicable to only group numbers, enter all group numbers.</inlineHelpText>
        <label>Group Numbers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>AIM</fullName>
                </value>
                <value>
                    <fullName>Anthem Health Guide</fullName>
                </value>
                <value>
                    <fullName>Anthem Health Rewards: Direct Package</fullName>
                </value>
                <value>
                    <fullName>Behavioral Health Solution</fullName>
                </value>
                <value>
                    <fullName>Benefits Admin</fullName>
                </value>
                <value>
                    <fullName>BOLD</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Disability</fullName>
                </value>
                <value>
                    <fullName>EAP</fullName>
                </value>
                <value>
                    <fullName>Expatriate</fullName>
                </value>
                <value>
                    <fullName>Health and Wellness</fullName>
                </value>
                <value>
                    <fullName>Integrated Health Model</fullName>
                </value>
                <value>
                    <fullName>Life</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Medical-CDHP</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>Network Based (BDTC)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Stop Loss</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>Weight Management Solution</fullName>
                </value>
                <value>
                    <fullName>Wellness Solution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PMPM</fullName>
                </value>
                <value>
                    <fullName>PCPM</fullName>
                </value>
                <value>
                    <fullName>% of Premium</fullName>
                </value>
                <value>
                    <fullName>Flat Dollar-Annual</fullName>
                </value>
                <value>
                    <fullName>Flat Dollar-Monthly</fullName>
                </value>
                <value>
                    <fullName>10BV05</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <description>Used for data load, the CIP, and Open Enrollment processes that need to be maintained in the old Commercial ORG.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Used for data load, the CIP, and Open Enrollment processes that need to be maintained in the old Commercial ORG.</inlineHelpText>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Groups_Contract_Codes_Package_Code__c</fullName>
        <description>Sprint 1</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If yes above, list Sub-Groups, Contract Codes, or Package Code Applicable To This Commission (Please separate numbers with a comma). Actual group information must be entered. Do not enter &apos;All&apos; or only a portion of the information.</inlineHelpText>
        <label>Sub-Groups/ Contract Codes/ Package Code</label>
        <type>TextArea</type>
    </fields>
    <label>Broker/Consultant Commissions</label>
    <nameField>
        <displayFormat>BCC# {00000}</displayFormat>
        <label>Broker/Consultant Commissions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Broker/Consultant Commissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ANA_VR_BROKCC01_AccountChangeRule</fullName>
        <active>true</active>
        <description>BW 2015
Sprint 3</description>
        <errorConditionFormula>AND( !$User.BypassValidation__c , Account__c &lt;&gt;  BrokerageAndConsultant__r.Account__c)</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>Invalid Account selection</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ANA_VR_BROKCC02_AppliesToPortion</fullName>
        <active>true</active>
        <description>Error will display if the &apos;Applies to only a portion of group #?&apos; = Yes, and the field Sub Groups/Contract Codes/Package Code is blank.</description>
        <errorConditionFormula>AND( !$User.BypassValidation__c , ISPICKVAL(Applies_to_only_a_portion_of_group__c, &quot;Yes&quot;)
&amp;&amp; ISBLANK(Sub_Groups_Contract_Codes_Package_Code__c))</errorConditionFormula>
        <errorDisplayField>Sub_Groups_Contract_Codes_Package_Code__c</errorDisplayField>
        <errorMessage>Please input additional information when this only applies to a portion of the Group #s</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ANA_VR_BROKCC03_AppliesToPortionV2</fullName>
        <active>true</active>
        <description>BW - ANA Sprint 3 - 9/22/2015

Error will display if the &apos;Applies to only a portion of group #?&apos; = No, and the field Sub Groups/Contract Codes/Package Code is not blank.</description>
        <errorConditionFormula>AND( !$User.BypassValidation__c ,ISPICKVAL(Applies_to_only_a_portion_of_group__c, &quot;No&quot;) 
&amp;&amp; NOT(ISBLANK(Sub_Groups_Contract_Codes_Package_Code__c)))</errorConditionFormula>
        <errorDisplayField>Sub_Groups_Contract_Codes_Package_Code__c</errorDisplayField>
        <errorMessage>You have answered No to &apos;Applies to only a portion of group #?&apos;. Please review your response.</errorMessage>
    </validationRules>
</CustomObject>